--- a/app/src/main/res/layout/activity_kurumsal_politikalar.xml
+++ b/app/src/main/res/layout/activity_kurumsal_politikalar.xml
@@ -1,9 +1,153 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".kurumsal_politikalar">
+    android:background="@color/white"
+    >
+
+    <LinearLayout
+        android:id="@+id/Linear1"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/circular_button"
+            android:layout_margin="20px"
+            >
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/Politika"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginStart="25px"
+                android:layout_marginTop="25px"
+                android:layout_marginEnd="25px"
+                android:layout_marginBottom="25px"
+                android:background="@drawable/circular_button"
+                android:gravity="center"
+                android:text="Kurumsal Politikalar"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18dp" />
+
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/Linear2"
+        android:layout_below="@+id/Linear1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/circular_button"
+            android:layout_margin="20px"
+            >
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/KVKK"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginStart="25px"
+                android:layout_marginTop="25px"
+                android:layout_marginEnd="25px"
+                android:layout_marginBottom="25px"
+                android:background="@drawable/circular_button"
+                android:gravity="center"
+                android:text="KVKK"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18dp" />
+
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/Linear3"
+        android:layout_below="@+id/Linear2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/circular_button"
+            android:layout_margin="20px"
+            >
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/BilgiGüv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginStart="25px"
+                android:layout_marginTop="25px"
+                android:layout_marginEnd="25px"
+                android:layout_marginBottom="25px"
+                android:background="@drawable/circular_button"
+                android:gravity="center"
+                android:text="27001 Bilgi Güvenliği"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="18dp" />
+
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_weight="0"
+        android:background="?android:attr/windowBackground"
+        app:itemBackground="@color/lighter_dark_blue"
+        app:itemIconTint="@color/red"
+        app:itemTextColor="@color/red"
+        app:menu="@menu/bottom_nav_menu" />
+
+
 
 </RelativeLayout>
